--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Full Menu - My Coffee Shop</title>
+    <title>Our Full Menu </title>
     <link rel="stylesheet" href="style.css"> <style>
         /* Add specific styles for the menu page layout here if needed */
         .menu-page-content {
@@ -113,7 +113,7 @@
                     </div>
                 </div>
                 <div class="menu-item-card">
-                    <img src="cappuccino.jpeg" alt="Cappuccino">
+                    <img src="Cappuccino.jpeg" alt="Cappuccino">
                     <div class="item-details">
                         <h3>Cappuccino</h3>
                         <p>Equal parts espresso, steamed milk, and foamed milk, topped with a dusting of cocoa powder.</p>
@@ -194,7 +194,7 @@
                 <div class="menu-item-card">
                     <img src="bread2.jpeg" alt="Mocha">
                     <div class="item-details">
-                            <h3>Mocha</h3>
+                            <h3>German bread</h3>
                             <p>A chocolate-flavored variant of a caffè latte. Often served with whipped cream.</p>
                     <span class="price">50000 Tsh</span>
                     </div>
@@ -202,7 +202,7 @@
                 <div class="menu-item-card">
                     <img src="bread3.jpeg" alt="Mocha">
                     <div class="item-details">
-                                    <h3>Mocha</h3>
+                                    <h3>Italian bread</h3>
                                     <p>A chocolate-flavored variant of a caffè latte. Often served with whipped cream.</p>
                                     <span class="price">50000 Tsh</span>
                     </div>
@@ -210,7 +210,7 @@
                 <div class="menu-item-card">
                     <img src="bread4.jpeg" alt="Mocha">
                     <div class="item-details">
-                                        <h3>Mocha</h3>
+                                        <h3>Tanzanian Bread</h3>
                                         <p>A chocolate-flavored variant of a caffè latte. Often served with whipped cream.</p>
                                         <span class="price">50000 Tsh</span>
                     </div>
@@ -218,7 +218,7 @@
                 <div class="menu-item-card">
                     <img src="bread5.jpeg" alt="Mocha">
                     <div class="item-details">
-                                            <h3>Mocha</h3>
+                                            <h3>American Flavor</h3>
                                             <p>A chocolate-flavored variant of a caffè latte. Often served with whipped cream.</p>
                                             <span class="price">50000 Tsh</span>
                     </div>
@@ -226,7 +226,7 @@
                 <div class="menu-item-card">
                     <img src="bread6.jpeg" alt="Mocha">
                     <div class="item-details">
-                                                <h3>Mocha</h3>
+                                                <h3>British Flavor</h3>
                                                 <p>A chocolate-flavored variant of a caffè latte. Often served with whipped cream.</p>
                                                 <span class="price">50000 Tsh</span>
                     </div>
